Split css into multiple files

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,4 +1,8 @@
 @import '_search.css';
+@import '_topbar.css';
+@import '_nav.css';
+@import '_home.css';
+@import '_footer.css';
 
 html {
   scroll-behavior: smooth;
@@ -10,6 +14,7 @@ html {
   padding: 0.5rem 1rem;
   color: white;
   width: fit-content;
+  transition: none !important;
 }
 
 .button:hover {
@@ -21,10 +26,6 @@ html {
 
 .button:visited {
   color: white;
-}
-
-.md-typeset a {
-  transition: none;
 }
 
 .blue-text {
@@ -48,532 +49,13 @@ html {
   margin: 0;
 }
 
-.md-sidebar {
-  min-height: 70vh;
-  padding-inline: 1rem;
-  flex-basis: 14rem;
-  flex-shrink: 1;
-  background-image: linear-gradient(var(--sky-blue-grey), white);
-  top: 4.3rem !important;
-  width: 14rem;
-}
-
-.md-sidebar, .md-sidebar__scrollwrap  {
-  overflow: visible;
-}
-
-#header-nav-links {
-  display: flex;
-  justify-content: center;
-  align-items: center
-}
-
-#header-nav-links a {
-  margin-left: 2rem;
-  font-size: 0.7rem;
-}
-
-.md-nav__title {
-  padding: 0 0.8rem !important;
-  display: flex;
-  align-items: flex-end;
-}
-
-.md-nav__title a {
-  position: static !important;
-}
-
-.md-nav__link, .md-nav__title {
-  background: none !important;
-  box-shadow: none !important;
-}
-
-.md-nav__list:last-child {
-  margin-bottom: 2rem;
-}
-
-#version-container .md-header__ellipsis {
-  padding-inline: 0.6rem;
-}
-
-#version-container .md-header__topic {
-  align-items: flex-start;
-}
-
-#version-container .md-header__topic, .md-version__current, .md-version {
-  font-size: 0.7rem;
-  line-height: 0.7rem;
-}
-
-.md-version {
-  display: flex;
-  align-items: flex-start;
-  position: relative;
-  top: -1px;
-}
-
-.md-version__current {
-  padding-left: 0.6rem;
-  margin: 0 !important;
-}
-
-.md-version__list {
-  margin: 0 !important;
-  margin-left: 0.2rem !important;
-  top: -0.5rem;
-}
-
-[dir="ltr"] .md-version__link {
-  padding-inline: 0.4rem;
-}
-
-[dir="ltr"] .md-header__title {
-  margin-left: 0;
-}
-
-.md-header__inner {
-  max-width: 100%;
-  margin-inline: 0.5rem;
-}
-
-.md-header__option {
-  margin-inline: 0.8rem;
-}
-
-.md-header {
-  box-shadow: none;
-  transition: none;
-}
-
-.top-right-links {
-  margin-left: auto;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  width: fit-content;
-}
-
 .narrow {
   display: none;
 }
 
-.md-header__button {
-  margin: 0;
-  padding: 0;
-}
-
-.header-image {
-  max-height: 2.4rem;
-  margin: 0.8rem;
-}
-
-#tabs {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-inline: 14rem;
-  background-color: var(--header-grey);
-}
-
-.md-tabs {
-  min-width: fit-content;
-}
-
-.md-tabs__link {
-  color: white;
-}
-
-#blue-bar {
-  background-color: var(--alces-blue);
-  width: 100%;
-  height: 0.3rem;
-  position: sticky;
-  top: 4.15rem;
-  z-index: 1;
-}
-
-#home-container {
-  background: linear-gradient(#ECECEC, var(--sky-blue-grey)) no-repeat;
-  display: flex;
-  justify-content: space-between;
-  min-height: 75vh;
-  align-items: center;
-  padding-inline: 10vw;
-}
-
-#home-image-container {
-  display: flex;
-  flex-basis: 40%;
-  justify-content: center;
-  align-items: center;
-}
-
-#home-image-container img {
-  max-height: 30rem !important;
-}
-
-#home-image-narrow {
-  display: none;
-}
-
-#home-text {
-  flex-basis: 60%;
-  margin-top: 10rem;
-  margin-bottom: 5rem;
-  margin-left: 5vw;
-  text-align: end;
-  align-self: center;
-  max-width: 40rem;
-}
-
-#home-header {
-  color: var(--md-typeset-color) !important;
-  font-size: 3rem !important;
-  font-weight: bold;
-  margin-bottom: 1rem;
-  white-space: nowrap;
-}
-
-#home-subheader {
-  color: var(--md-typeset-color) !important;
-  font-size: 1.4rem;
-  margin-top: 0;
-  margin-bottom: 3rem;
-}
-
-#cloud-bar {
-  width: 100%;
-  min-width: 60rem;
-}
-
-#mission-block {
-  height: 30rem;
-  background-color: var(--sky-blue-grey);
-  display: flex;
-  flex-direction: column;
-}
-
-#mission-container {
-  background-image: linear-gradient(#F5FCFF, #9CD7F0);
-  flex-grow: 1;
-  padding-inline: 10vw;
-  display: grid;
-  grid-template-columns: 3fr 2fr;
-  align-items: center;
-  justify-items: center;
-  column-gap: 5vw;
-}
-
-#mission-bumcloud {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  max-height: 15rem;
-}
-
-#tools-block {
-  background-color: #F5FCFF;
-  display: flex;
-  flex-direction: column;
-  padding-inline: 10vw;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.home-block h1 {
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-}
-
-#tools-container {
-  margin: 2rem 0;
-  flex-grow: 1;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 3rem;
-  justify-items: center;
-}
-
-.tool {
-  min-width: 10rem;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.tool img {
-  width: 10rem;
-  margin-inline: auto;
-}
-
-.tool h2 {
-  margin-top: 1rem;
-}
-
-.tool p {
-  margin-top: 3rem;
-}
-
-.tool .button {
-  margin-inline: auto;
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-}
-
-#green-block {
-  background-image: linear-gradient(#CDEFFF, #EBEBEB);
-  padding-inline: 10vw;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  height: 28rem;
-}
-
-#green-container {
-  display: grid;
-  grid-template-columns: 3fr 2fr;
-  align-items: center;
-  justify-items: center;
-  height: 100%;
-  max-width: 50rem;
-  margin: auto;
-}
-
-#green-container div {
-  margin: auto;
-}
-
-#green-container img {
-  max-height: 20rem;
-}
-
-#ready-block {
-  background-color: white;
-  padding-inline: 10vw;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  text-align: center;
-}
-
-#ready-container {
-  margin-inline: auto;
-  max-width: 27rem;
-}
-
-#ready-container h1 {
-  margin-bottom: 2rem;
-}
-
-#ready-buttons {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  margin-top: 1.5rem;
-}
-
-#ready-buttons .button {
-  margin-inline: 1vw;
-  margin-top: 0.5rem;
-}
-
-#footer-container {
-  display: block;
-}
-
-.footer {
-  display: flex;
-  position: relative;
-  z-index: 1;
-  justify-content: center;
-  align-items: center;
-  max-height: 5rem;
-  width: 100%;
-  padding-bottom: 0.5rem;
-  background-color: white;
-}
-
-.cloud {
-  width: 30vw;
-  position: absolute;
-  bottom: 0;
-}
-
-#cloud-l {
-  left: 0;
-}
-
-#cloud-r {
-  right: 0;
-}
-
-#github-logo {
-  max-height: 1.2rem;
-  margin-inline: 0.8rem;
-}
-
-@media screen and (max-width: 76.1875em) {
-  [data-md-toggle="drawer"]:checked ~ .md-container .md-sidebar--primary {
-    transform: translateX(14rem);
-  }
-
-  .md-sidebar--primary {
-    left: -14rem !important;
-    top: 0 !important;
-    display: block !important;
-  }
-
-  .md-sidebar--primary .top-level {
-    display: block !important;
-    flex-basis: fit-content;
-    flex-grow: 0;
-  }
-
-  .md-sidebar--primary .sub-level {
-    margin-left: 1rem;
-  }
-
-  .md-sidebar--primary .top-level li {
-    padding: 0.6rem 0.8rem;
-    font-size: 0.8rem;
-    font-weight: bold;
-  }
-
-  .md-sidebar--primary .alces-link {
-    display: block !important;
-    align-self: center;
-  }
-
-  .md-nav--primary {
-    background-image: linear-gradient(var(--sky-blue-grey), white);
-  }
-
-  .md-nav-logo {
-    padding: 0 !important;
-    margin: 0 !important;
-    align-self: center;
-  }
-
-  .md-nav__list {
-    background-color: transparent !important;
-  }
-
-  #burger {
-    display: none;
-  }
-
-  #tabs {
-    padding-inline: 1rem;
-    min-width: 65%;
-  }
-
-  .md-tabs {
-    display: block;
-  }
-
-  #version-container {
-    width: 100%;
-  }
-
-  #version-container .md-header__topic {
-    padding-top: 0.8rem;
-    align-items: flex-start;
-  }
-
-  #version-container .md-header__ellipsis {
-    padding-inline: 0.8rem;
-  }
-
-  .md-version {
-    top: 0;
-  }
-
-  #home-header {
-    font-size: 2.5rem !important;
-  }
-
-  #home-subheader {
-    font-size: 1.2rem;
-  }
-}
-
 @media screen and (max-width: 59.9375em) {
-  .md-nav__source {
-    display: none;
-  }
-
-  #header-nav-links {
-    display: none !important;
-  }
-
-  .top-right-links {
-    display: none !important;
-  }
-
   .narrow {
     display: flex !important;
-  }
-
-  #burger {
-    display: inline-block;
-    margin-left: 2rem;
-    margin-right: 0.8rem;
-  }
-
-  #tabs {
-    display: none;
-  }
-
-  .md-tabs {
-    display: none;
-  }
-
-  #home-container {
-    flex-wrap: wrap-reverse;
-  }
-
-  #home-container div {
-    flex-basis: 100%;
-    max-width: 100%;
-  }
-
-  #home-text {
-    margin-top: 2rem;
-    margin-bottom: 0;
-    margin-left: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  #home-text h1, h2 {
-    text-align: center;
-  }
-
-  #home-image-narrow {
-    display: block;
-    max-width: 20rem;
-  }
-
-  #home-image {
-    display: none;
-  }
-
-  #tools-container {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 1fr);
-  }
-
-  .tool .button {
-    margin-top: 1.5rem;
-  }
-
-  #tools-block h1 {
-    text-align: center;
-  }
-}
-
-@media screen and (max-width: 25em) {
-  #ready-buttons {
-    flex-wrap: wrap;
   }
 }
 
