--- a/custom_theme/partials/header.html
+++ b/custom_theme/partials/header.html
@@ -47,10 +47,10 @@
     </a>
 
     <div id="header-nav-links">
-      <a href="{{ base_url }}/solo" style="color:white">
+      <a href="{{ base_url }}/solo">
         FLIGHT SOLO
       </a>
-      <a href="{{ base_url }}/docs" style="color:white">
+      <a href="{{ base_url }}/docs">
         DOCUMENTATION
       </a>
     </div>
