--- a/docs/stylesheets/_home.css
+++ b/docs/stylesheets/_home.css
@@ -85,6 +85,12 @@
     padding-bottom: 2rem;
 }
 
+.home-block {
+    position: relative;
+    left: -1.2rem;
+    width: 100vw;
+}
+
 .home-block h1 {
     margin-top: 2rem;
     margin-bottom: 1rem;
@@ -155,7 +161,7 @@
 #ready-block {
     background-color: white;
     padding-inline: 10vw;
-    padding-top: 3rem;
+    padding-top: 1rem;
     padding-bottom: 3rem;
     text-align: center;
 }
