Stop header links jumping when page loads

--- a/custom_theme/partials/header.html
+++ b/custom_theme/partials/header.html
@@ -39,7 +39,7 @@
     <a
             href="{{ config.extra.homepage | d(nav.homepage.url, true) | url }}"
             title="{{ config.site_name | e }}"
-            class="md-header__button"
+            class="md-header__button md-header__logo"
             aria-label="{{ config.site_name }}"
             data-md-component="logo"
     >
