--- a/docs/stylesheets/_search.css
+++ b/docs/stylesheets/_search.css
@@ -1,6 +1,6 @@
 .search-container {
     margin-left: 1rem;
-    z-index: 4;
+    z-index: 2;
 }
 
 [data-md-toggle=search]:checked~.md-container #tabs {
@@ -15,11 +15,19 @@
     right: 0;
 }
 
-[data-md-toggle=search]:checked~.md-container .md-search__overlay {
+[data-md-toggle=search]:checked~.md-container #search-overlay {
     width: 100%;
     height: 100%;
     transition: width 0s,height 0s,opacity .25s;
     opacity: 1;
+}
+
+#search-overlay {
+    z-index: 2;
+}
+
+.md-search .md-search__overlay {
+    display: none;
 }
 
 [data-md-toggle=search]:checked~.md-container .md-search__scrollwrap {
