Use page specific footers

--- a/custom_theme/partials/footer.html
+++ b/custom_theme/partials/footer.html
@@ -1,7 +1,7 @@
-<div id="footer-container">
+<div class="footer-container" id="docs-footer">
   <div class="footer">
-    <img id="cloud-l" class="cloud" src="{{ base_url }}/assets/images/parting_cloud_l.png">
-    <img class="header-image" src="{{ base_url }}/assets/images//openflighthpc_grey.png">
-    <img id="cloud-r" class="cloud" src="{{ base_url }}/assets/images/parting_cloud_r.png">
+    <img id="cloud-l" class="cloud" src="{{ base_url }}/assets/images/low_cloud_l.png">
+<!--    <img class="footer-logo" src="{{ base_url }}/assets/images//openflighthpc_grey.png">-->
+    <img id="cloud-r" class="cloud" src="{{ base_url }}/assets/images/low_cloud_r.png">
   </div>
 </div>
