--- a/docs/stylesheets/_footer.css
+++ b/docs/stylesheets/_footer.css
@@ -1,3 +1,7 @@
+#docs-footer {
+    display: none;
+}
+
 #footer-container {
     display: block;
 }
@@ -8,16 +12,24 @@
     z-index: 1;
     justify-content: center;
     align-items: center;
-    max-height: 5rem;
+    height: 4rem;
     width: 100%;
-    padding-bottom: 0.5rem;
     background-color: white;
 }
 
+.footer-logo {
+    max-height: 2rem;
+    margin: 1rem 0.4rem 0.4rem;
+}
+
 .cloud {
-    width: 30vw;
+    width: 20vw;
     position: absolute;
     bottom: 0;
+}
+
+.parting-cloud {
+    width: 35vw;
 }
 
 #cloud-l {
