Add solo page structure for wide screens

--- a/custom_theme/partials/footer.html
+++ b/custom_theme/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="footer-container" id="docs-footer">
+<div class="footer-container" id="footer">
   <div class="footer">
     <img id="cloud-l" class="cloud" src="{{ base_url }}/assets/images/low_cloud_l.png">
     <img id="cloud-r" class="cloud" src="{{ base_url }}/assets/images/low_cloud_r.png">
