--- a/docs/stylesheets/_home.css
+++ b/docs/stylesheets/_home.css
@@ -187,6 +187,27 @@
     margin-top: 0.5rem;
 }
 
+
+#footer-container {
+    display: block;
+}
+
+.footer {
+    display: flex;
+    position: relative;
+    z-index: 1;
+    justify-content: center;
+    align-items: center;
+    height: 5rem;
+    width: 100%;
+    background-color: white;
+}
+
+.footer-logo {
+    max-height: 2rem;
+    margin: 1rem 0.4rem 0.4rem;
+}
+
 @media screen and (max-width: 76.1875em) {
     #home-header {
         font-size: 2.5rem !important;
@@ -240,6 +261,18 @@
 
     #tools-block h1 {
         text-align: center;
+    }
+
+    #cloud-l.parting-cloud {
+        content: url('../assets/images/low_cloud_l.png');
+    }
+
+    #cloud-r.parting-cloud {
+        content: url('../assets/images/low_cloud_r.png');
+    }
+
+    .footer-logo {
+        display: none;
     }
 }
 
