--- a/docs/stylesheets/_solo.css
+++ b/docs/stylesheets/_solo.css
@@ -1,36 +1,47 @@
 .solo-container {
     display: flex;
     align-items: center;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 100%;
+    position: relative;
+    left: -1.2rem;
+    top: -1.2rem;
     width: 100vw;
+    min-height: 75vh;
 }
 
 .solo-content {
     display: flex;
     flex-grow: 1;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 100%;
 }
 
-.solo-container h1,p {
+.solo-container h1 {
+    margin-bottom: 2rem;
+    margin-top: 4rem;
+}
+
+.solo-container p {
     margin-bottom: 3rem;
-    margin-top: 0;
+    margin-inline: 0.8rem;
+    text-align: center;
 }
 
 .solo-card-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
 .solo-card {
-    border: solid lightgrey 1px;
+    border: solid #E1E1E1 1px;
     border-radius: 2px;
-    margin-inline: 1rem;
+    margin: 1rem;
     height: 15rem;
     width: 15rem;
+}
+
+@media screen and (max-width: 59.9375em) {
+    .solo-container h1 {
+        margin-top: 2rem;
+    }
 }
