Add content and formatting to solo page main text

--- a/docs/stylesheets/_solo.css
+++ b/docs/stylesheets/_solo.css
@@ -24,6 +24,8 @@
     margin-bottom: 3rem;
     margin-inline: 0.8rem;
     text-align: center;
+    font-size: 0.9rem;
+    max-width: 41rem;
 }
 
 .solo-card-container {
