--- a/docs/stylesheets/_solo.css
+++ b/docs/stylesheets/_solo.css
@@ -45,6 +45,8 @@
     height: 15rem;
     width: 15rem;
     padding: 1rem;
+    background-color: white;
+    border: solid var(--sky-blue-grey) 1px;
 }
 
 .card-text {
@@ -66,12 +68,31 @@
 }
 
 .solo-card:hover {
-    background-color: #E8F8FF;
-    transition: background-color 0.5s;
+    background-color: var(--light-cloud-blue);
+    border: solid var(--light-cloud-blue) 1px;
+    transition: background-color 0.5s, border 0.5s;
 }
 
 @media screen and (max-width: 59.9375em) {
+    .solo-container {
+        background-image: linear-gradient(var(--light-cloud-blue), white);
+    }
+
     .solo-container h1 {
         margin-top: 2rem;
+        margin-bottom: 0.5rem;
+    }
+
+    #solo-main-text {
+        margin-bottom: 0;
+    }
+
+    .solo-card {
+        border: solid var(--light-cloud-blue) 1px;
+    }
+
+    .solo-card:hover {
+        background-color: #D4F0FD;
+        border: solid #D4F0FD 1px;
     }
 }
