--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -79,5 +79,6 @@ html {
   --header-grey: #191919;
   --button-navy: #2B3966;
   --sky-blue-grey: #DCEEF5;
+  --light-cloud-blue: #E8F8FF;
   --home-sky-dark: #E1F2FA;
 }
