Fix home page layout for narrow screen widths

--- a/docs/stylesheets/_home.css
+++ b/docs/stylesheets/_home.css
@@ -119,11 +119,11 @@
 }
 
 .tool h2 {
-    margin-top: 1rem;
+    margin-top: 2rem;
 }
 
 .tool p {
-    margin-top: 3rem;
+    margin-top: 1.5rem;
 }
 
 .tool .button {
@@ -229,9 +229,7 @@
     }
 
     #home-text {
-        margin-top: 2rem;
-        margin-bottom: 0;
-        margin-left: 0;
+        margin: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -241,8 +239,13 @@
         text-align: center;
     }
 
+    #home-subheader {
+        margin-bottom: 2.5rem;
+    }
+
     #home-image-narrow {
         display: block;
+        width: 80vw;
         max-width: 20rem;
     }
 
@@ -250,16 +253,56 @@
         display: none;
     }
 
+    #mission-block {
+        height: auto;
+    }
+
+    #mission-container {
+        display: flex;
+        flex-direction: column-reverse;
+        padding-top: 2rem;
+        padding-bottom: 3rem;
+        text-align: center;
+    }
+
+    #mission-container h1 {
+        margin-top: 0.5rem;
+    }
+
     #tools-container {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(3, 1fr);
     }
 
+    .tool h2 {
+        margin-top: 0;
+        margin-bottom: 0.5rem;
+    }
+
+    .tool p {
+        margin-top: 0;
+    }
+
     .tool .button {
-        margin-top: 1.5rem;
+        margin-top: 0;
     }
 
     #tools-block h1 {
+        text-align: center;
+    }
+
+    .home-block {
+        height: auto !important;
+    }
+
+    #green-block {
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+    }
+
+    #green-container {
+        display: flex;
+        flex-direction: column-reverse;
         text-align: center;
     }
 
