--- a/docs/stylesheets/_solo.css
+++ b/docs/stylesheets/_solo.css
@@ -39,14 +39,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #D4F0FD;
     border-radius: 2px;
     margin: 1rem;
     height: 15rem;
     width: 15rem;
     padding: 1rem;
     background-color: white;
-    border: solid var(--sky-blue-grey) 1px;
+    border: solid var(--light-blue) 1px;
 }
 
 .card-text {
@@ -68,14 +67,22 @@
 }
 
 .solo-card:hover {
-    background-color: var(--light-cloud-blue);
-    border: solid var(--light-cloud-blue) 1px;
-    transition: background-color 0.5s, border 0.5s;
+    background-color: var(--alces-blue);
+    border: solid var(--alces-blue) 1px;
+    transition: background-color 0.5s, border 0.5s, filter 0.5s;
+}
+
+.solo-card:hover img {
+    filter: brightness(4);
+}
+
+.solo-card:hover h2, .solo-card:hover p {
+    color: white;
 }
 
 @media screen and (max-width: 59.9375em) {
     .solo-container {
-        background-image: linear-gradient(var(--light-cloud-blue), white);
+        background-image: linear-gradient(var(--sky-blue-grey), white);
     }
 
     .solo-container h1 {
@@ -85,14 +92,5 @@
 
     #solo-main-text {
         margin-bottom: 0;
-    }
-
-    .solo-card {
-        border: solid var(--light-cloud-blue) 1px;
-    }
-
-    .solo-card:hover {
-        background-color: #D4F0FD;
-        border: solid #D4F0FD 1px;
     }
 }
