Open new tab on clicking header github repo link

--- a/custom_theme/partials/header.html
+++ b/custom_theme/partials/header.html
@@ -125,7 +125,7 @@
       </div>
       {% endif %}
 
-      <a href="https://github.com/openflighthpc" title="Go to openflightHPC Github repo">
+      <a href="https://github.com/openflighthpc" title="Go to openflightHPC Github repo" target="_blank">
         <img id="github-logo" class="md-header__button" src="{{ base_url }}/assets/images/github-mark-white.svg">
       </a>
 
