Use vector images for low footer clouds

--- a/custom_theme/partials/footer.html
+++ b/custom_theme/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="footer-container" id="footer">
   <div class="footer">
-    <img id="cloud-l" class="cloud" src="{{ base_url }}/assets/images/low_cloud_l.png">
-    <img id="cloud-r" class="cloud" src="{{ base_url }}/assets/images/low_cloud_r.png">
+    {% include "assets/low_cloud_l.svg" %}
+    {% include "assets/low_cloud_r.svg" %}
   </div>
 </div>
