Convert graphics to vector images

--- a/custom_theme/partials/header.html
+++ b/custom_theme/partials/header.html
@@ -130,7 +130,7 @@
       </a>
 
       <a id="alces-link" href="https://alces-flight.com" target="_blank">
-        <img class="header-image" src="{{ base_url }}/assets/images/poweredby_white.png">
+        <img class="header-image" src="{{ base_url }}/assets/images/poweredby_white.svg">
       </a>
     </div>
 
