Fix to stop centering subheaders in docs

--- a/docs/stylesheets/_home.css
+++ b/docs/stylesheets/_home.css
@@ -241,7 +241,7 @@
         align-items: center;
     }
 
-    #home-text h1, h2 {
+    #home-text h1, #home-text h2 {
         text-align: center;
     }
 
