--- a/custom_theme/partials/nav.html
+++ b/custom_theme/partials/nav.html
@@ -22,7 +22,8 @@
       aria-label="{{ config.site_name }}"
       data-md-component="logo"
     >
-      <img src="{{ base_url }}/assets/images/openflighthpc_grey.svg">
+      <img alt="Openflight HPC"
+           src="{{ base_url }}/assets/images/openflighthpc_grey.svg">
     </a>
   </label>
 
@@ -56,7 +57,8 @@
   </div>
 
   <a class="alces-link" href="https://alces-flight.com" target="_blank" hidden="hidden">
-    <img class="header-image" src="{{ base_url }}/assets/images/poweredby.svg">
+    <img alt="Powered by Alces Flight Ltd"
+         class="header-image" src="{{ base_url }}/assets/images/poweredby.svg">
   </a>
 </nav>
 
