--- a/custom_theme/partials/header.html
+++ b/custom_theme/partials/header.html
@@ -127,9 +127,9 @@
       </div>
       {% endif %}
 
-      <a href="https://github.com/openflighthpc" title="Go to openflightHPC Github repo" target="_blank">
+      <a href="https://github.com/openflighthpc" title="Go to the OpenflightHPC Github repo" target="_blank">
         <img id="github-logo"
-             alt="Github logo"
+             alt=""
              class="md-header__button"
              src="{{ base_url }}/assets/images/github-mark-white.svg">
       </a>
