Hide outdated banner on pages other than docs

--- a/docs/stylesheets/_topbar.css
+++ b/docs/stylesheets/_topbar.css
@@ -58,6 +58,10 @@ header {
     margin: 0.8rem;
 }
 
+.md-banner--warning {
+    display: none;
+}
+
 #tabs {
     display: none;
     justify-content: space-between;
