--- a/docs/stylesheets/_footer.css
+++ b/docs/stylesheets/_footer.css
@@ -8,6 +8,7 @@
     position: absolute;
     bottom: 0;
     height: auto;
+    display: block;
 }
 
 .parting-cloud {
@@ -24,6 +25,6 @@
 
 @media screen and (max-width: 76.1875em) {
     .footer {
-        height: 6rem;
+        height: 6rem !important;
     }
 }
