--- a/docs/stylesheets/_home.css
+++ b/docs/stylesheets/_home.css
@@ -62,7 +62,7 @@
     display: block;
 }
 
-#mission-container {
+#mission-block {
     height: 25rem;
     background-image: linear-gradient(#F5FCFF, #9CD7F0);
     padding-inline: var(--home-inline-padding);
@@ -130,7 +130,6 @@
     padding-inline: var(--home-inline-padding);
     padding-top: 2rem;
     padding-bottom: 2rem;
-    height: 28rem;
 }
 
 #green-container {
@@ -138,8 +137,8 @@
     grid-template-columns: 3fr 2fr;
     align-items: center;
     justify-items: center;
-    height: 100%;
     max-width: 50rem;
+    height: 28rem;
     margin: auto;
 }
 
@@ -153,7 +152,6 @@
 
 #ready-block {
     background-color: white;
-    padding-inline: var(--home-inline-padding);
     padding-top: 1rem;
     padding-bottom: 2rem;
     text-align: center;
@@ -181,17 +179,12 @@
 }
 
 #home-footer-block {
-    display: block;
-}
-
-#home-footer-container {
     display: flex;
     position: relative;
     z-index: 1;
     justify-content: center;
     align-items: center;
     height: 5rem;
-    width: 100%;
     background-color: white;
 }
 
@@ -259,7 +252,7 @@
         top: -2rem;
     }
 
-    #mission-container {
+    #mission-block {
         height: auto;
         display: flex;
         flex-direction: column-reverse;
@@ -267,7 +260,7 @@
         padding-bottom: 3rem;
     }
 
-    #mission-container h1 {
+    #mission-block h1 {
         margin-top: 0.5rem;
     }
 
@@ -292,6 +285,7 @@
     #green-container {
         display: flex;
         flex-direction: column-reverse;
+        height: auto;
     }
 
     #cloud-l.parting-cloud {
