Fix padding on home page

--- a/docs/stylesheets/_home.css
+++ b/docs/stylesheets/_home.css
@@ -152,8 +152,7 @@
 
 #ready-block {
     background-color: white;
-    padding-top: 1rem;
-    padding-bottom: 2rem;
+    padding: 1rem var(--home-inline-padding) 2rem;
     text-align: center;
 }
 
