Fix footer height

--- a/custom_theme/partials/footer.html
+++ b/custom_theme/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="footer-container" id="footer">
+<div class="footer-container" id="footer-container">
   <div class="footer">
     {% include "assets/low_cloud_l.svg" %}
     {% include "assets/low_cloud_r.svg" %}
