Add workshop page with header block

--- a/custom_theme/partials/nav.html
+++ b/custom_theme/partials/nav.html
@@ -35,6 +35,11 @@
       </a>
     </li>
     <li>
+      <a href="{{ base_url }}/workshop">
+        FLIGHT WORKSHOP
+      </a>
+    </li>
+    <li>
       <a href="{{ base_url }}/docs">
         DOCUMENTATION
       </a>
