--- a/custom_theme/partials/header.html
+++ b/custom_theme/partials/header.html
@@ -52,6 +52,9 @@
       <a href="{{ base_url }}/solo">
         FLIGHT SOLO
       </a>
+      <a href="{{ base_url }}/workshop">
+        FLIGHT WORKSHOP
+      </a>
       <a href="{{ base_url }}/docs">
         DOCUMENTATION
       </a>
