--- a/docs/stylesheets/_workshop.css
+++ b/docs/stylesheets/_workshop.css
@@ -6,3 +6,52 @@
     align-items: center;
     height: 11.5rem;
 }
+
+.workshop-header p {
+    text-align: center;
+}
+
+#workshop {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(17.5rem, 1fr));
+    grid-gap: 1rem;
+    justify-content: space-between;
+    padding: 2.5rem;
+}
+
+.template-card {
+    display: grid;
+    grid-template:
+        [row1-start] "header header" 1fr [row1-end]
+        [row2-start] "icon stats" 5fr [row2-end]
+        / 1fr 1fr;
+    align-items: center;
+    column-gap: 2rem;
+    row-gap: 0.5rem;
+    margin: 0 !important;
+}
+
+.template-header {
+    grid-area: header;
+    text-align: center;
+    margin: 0 !important;
+}
+
+.template-icon {
+    grid-area: icon;
+    margin: 0.5rem;
+    max-height: 10rem;
+}
+
+.template-stats {
+    grid-area: stats;
+    list-style-type: none !important;
+    margin: 0;
+}
+
+.template-stats li {
+    margin-left: 0 !important;
+    margin-bottom: 0.3rem !important;
+    font-weight: 300;
+    font-size: 0.9rem;
+}
