--- a/docs/stylesheets/_workshop.css
+++ b/docs/stylesheets/_workshop.css
@@ -59,6 +59,12 @@
     font-size: 0.9rem;
 }
 
+.template-stats-icon {
+    margin-right: 0.5rem;
+    color: var(--alces-blue);
+    width: 1rem;
+}
+
 .template-back-link {
     align-self: flex-start;
     color: var(--alces-grey) !important;
